# remeres-map-editor

./: .dockerignore  .reviewdog.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg.json
.github/workflows/: autofix-ci.yml  ci.yml  reusable-build-docker.yml  reusable-build-linux.yml  reusable-build-windows.yml  reusable-checks.yml
cmake/: LoggingHelper.cmake  MessageColors.cmake
data/creatures/: monsters.xml  npcs.xml
data/items/: items.otb
docs/compiling/: compiling-on-debian.md  compiling-on-ubuntu-24.04.md  compiling-on-windows-(cmake).md  (+3 more)
scripts/: cave_generator.lua  city_lot_generator.lua  claude_agent.lua  dungeon_generator.lua  forest_generator.lua  house_visualizer.lua  island_generator.lua  item_counter.lua  map_stats_exporter.lua  maze_generator.lua  river_generator.lua  spawn_visualizer.lua  street_generator.lua
source/: CMakeLists.txt  application.cpp  client_assets.cpp  common_windows.h  copybuffer.cpp  definitions.h  find_item_window.cpp  find_item_window.h  gl_renderer.cpp  gui_ids.h  iomap_otbm.cpp  iomap_otbm.h  item.cpp  item.h  item_filter.cpp  item_filter.h  main.h  map_display.cpp  map_display.h  map_drawer.cpp  map_drawer.h  monsters.cpp  npcs.cpp  numbertextctrl.cpp  numbertextctrl.h  old_properties_window.cpp  old_properties_window.h  palette_brushlist.cpp  palette_window.cpp  palette_window.h  palette_zones.cpp  preferences.cpp  preferences.h  properties_window.cpp  properties_window.h  tile.h  zone_occupied_positions.cpp  zones.cpp  zones.h
source/protobuf/: CMakeLists.txt
vcproj/: RME.sln
(+4 files in other folders)
